added additional line to new index page

--- a/index_new.html
+++ b/index_new.html
@@ -8,5 +8,6 @@
     <div id="Line group 1">
         <p>This is the first line!</p>
     </div>
+    <br><p>This is another line! Gonna track this in Github.</p>
   </body>
 </html>
