added a second change to the new index file

--- a/index_new.html
+++ b/index_new.html
@@ -9,5 +9,6 @@
         <p>This is the first line!</p>
     </div>
     <br><p>This is another line! Gonna track this in Github.</p>
+    <p>second change to the original!</p>
   </body>
 </html>
